Fixing content alignment on Magazine

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -13561,7 +13561,7 @@ body.page-node-type-magazine-article #block-ucsf-mag-content {
     body.page-node-type-magazine-article #block-ucsf-mag-content .page_narrow,
     body.page-node-type-magazine-article #block-ucsf-mag-content .paragraph-text-block {
       grid-column: 2 / -2;
-      margin: initial; } }
+      width: 100%; } }
   @media (min-width: 1280px) {
     body.page-node-type-magazine-article #block-ucsf-content .page_narrow,
     body.page-node-type-magazine-article #block-ucsf-content .paragraph-text-block,
